...
        icon={<Queue size={16} color={colors.textSecondary} />}
        label="Play next"
        onPress={then(() => player.playNext([song.id]))}
      />
      <SheetItem
        icon={<ListMusic size={16} color={colors.textSecondary} />}
        label="Add to queue"
        onPress={then(() => player.addToQueue([song.id]))}
      />
      <SheetItem
        icon={
          <Heart
            size={16}
...
